style.css
* {
  padding: 0;
  margin: 0;
}
body {
  font-family: "Figtree", sans-serif;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
}
.menu-class {
  background-color: rgb(14, 32, 41);
  max-height: 81px;
  flex: 1;
}
.header-wrap {
  max-width: 1440px;
  height: 81px;
  margin: auto;
  display: flex;
  align-items: center;
  justify-content: flex-start;
}
.wrapper {
  max-width: 1440px;
  display: flex;
  justify-content: center;
}
.main-section {
  margin: 0 auto;
  width: 1440px;
  align-items: center;
  flex-direction: column;
}
.main-section-big {
  background-image: url("img/background.png");
  flex: 1;
  display: flex;
}
h1 {
  font-family: "Figtree", sans-serif;
  color: white;
  font-size: 56px;
  font-weight: 800;
  margin-bottom: 80px;
}
.footer-class {
   background-image: url("img/Subtract.png");
  background-color: black;
  object-fit: contain;
  min-height: 128px;
  width: 100%;
  display: flex;
  justify-content: center;
  flex-direction: column;
  align-items: center;
  flex-shrink: 0;
}
.footer-wrap {
  width: 1440px;
  min-height: 128px;
 
  display: flex;
  flex-direction: column;
  justify-self: center;
  align-items: center;
  object-fit: cover;
}

.footer-wrap img {
  height: 36px;
  object-fit: contain;
  margin-top: 20px;
}
.footer-wrap p {
  padding-top: 20px;
  color: gray;
}

.main-images {
  width: 150px;
  height: 150px;
  border: solid 1px grey;
  border-radius: 20px;
  object-fit: cover;
  cursor: pointer;
}
.main-container-images {
  display: flex;
  gap: 16px;
  height: auto;
  flex-wrap: wrap;
}
dialog {
  border: none;
  padding: 0;
  background: transparent;
}

dialog[open] {
  display: flex;
}

.images-Dialog {
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin: auto;
  padding: 30px;
  border-radius: 30px;
  background-color: rgb(14, 32, 41);
}

.dialog-header {
  display: flex;
  align-items: center;
  justify-content: space-between;
  width: 100%;
}

.dialog-main-image {
  width: 560px;
  height: 372px;
  object-fit: cover;
}

.images-Dialog header {
  display: flex;
  color: white;
  justify-content: space-between;
}

.images-Dialog footer {
  display: flex;
  color: white;
  align-items: center;
  gap: 50px;
}

.images-Dialog button {
  all: unset;
  cursor: pointer;
  background-color: rgb(14, 32, 41);
}
.value-image {
  color: white;
}
dialog::backdrop {
  backdrop-filter: blur(5px);
  background-color: rgba(0, 0, 0, 0.5);
}
.btn {
  background: transparent;
  border: none;
}
.btn:hover {
  transform: scale(1.1);
}
@media (max-width: 700px) {
  .menu-class {
    justify-content: center;
    align-items: center;
  }
  .main-section-big {
    padding-bottom: 30px;
  }
  .header-wrap {
    justify-content: center;
  }
  .main-section h1 {
    text-align: center;
    font-size: 48px;
    font-weight: 800;
  }
  .main-container-images {
    justify-content: center;
  }
  .main-images {
    width: 150px;
    height: 150px;
  }
  .dialog-main-image {
    width: 300px;
    height: 375px;
    object-fit: cover;
  }
  .dialog-header h2 {
    font-size: 24px;
  }
  .footer-wrap {
    width: 100%;
  }
  .footer-wrap p {
    margin-top: 20px;
  }
  .images-Dialog {
    justify-content: center;
    align-items: center;
  }
}

